Cleaning up comments & node modules

--- a/app/views/includes/config.jade
+++ b/app/views/includes/config.jade
@@ -1,13 +1,13 @@
-//	----------- CONFIG VARIABLES ----------- 
-//	| FUNCTION: 
-//	|	Sets the current site and includes all settings for site
-//	| DEPENDENCIES: 
-//	|	Javascript config (layout.jade) dymanically generated from variables.
-//  | USE: 
-//	|	config.[setting]
-//	|	account.[setting]
-//  |   pages (for iterations)
-//	----------------------------------------
+//-	----------- CONFIG VARIABLES ----------- 
+//-	| FUNCTION: 
+//-	|	Sets the current site and includes all settings for site
+//-	| DEPENDENCIES: 
+//-	|	Javascript config (layout.jade) dymanically generated from variables.
+//- | USE: 
+//-	|	config.[setting]
+//-	|	account.[setting]
+//- |   pages (for iterations)
+//-	----------------------------------------
 
 
 - var accounts = { google: 'UA-xxxx-x' }
