--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,7 +1,7 @@
-//Top area for SEO
+//- Top area for SEO
 div.top #{config.site_title} - #{config.site_desc}
 
-//Fixed Nav Menu
+//- Fixed Nav Menu
 nav#nav
 	ul#navlist
 		each val in pages
