--- a/app/views/includes/layout.jade
+++ b/app/views/includes/layout.jade
@@ -1,18 +1,18 @@
-//	------------ LOAD CONFIG  ------------- 
+//-	------------ LOAD CONFIG  ------------- 
 include ./config
 
-//	----------- TEMPLATE LAYOUT ----------- 
+//-	----------- TEMPLATE LAYOUT ----------- 
 include ./htmlhead
 body
 	
-	// -- NAV & HERO --
+	//- -- NAV & HERO --
 	include ./header
 
-	// -- CONTENT BLOCK --
+	//- -- CONTENT BLOCK --
 	block content
 	
-	// -- FOOTER --
+	//- -- FOOTER --
 	include ./footer
 
-	// -- SCRIPTS --
+	//- -- SCRIPTS --
 	include ./scripts
