--- a/app/views/pages/one.jade
+++ b/app/views/pages/one.jade
@@ -1,8 +1,8 @@
 div.row
 	div.col-md-12.center
-		//DIV.PAGE: a max-width div for centering content. Full width content should be placed outside of this div.
+		//- DIV.PAGE: a max-width div for centering content. Full width content should be placed outside of this div.
 		div.page
-			//Logo
+			//- Logo
 			header#header 
 				div.logo 
 					img(src="./images/logo.gif" alt="#{config.site_title}" border="0")
