--- a/app/views/includes/scripts.jade
+++ b/app/views/includes/scripts.jade
@@ -1,13 +1,13 @@
-// VENDOR SCRIPTS
-// ----------------------------------------------------
+//- VENDOR SCRIPTS
+//- ----------------------------------------------------
 script(type="text/javascript", src="http://code.jquery.com/jquery-1.11.2.min.js")
 script(type="text/javascript", src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js")
 script(type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js")
 
 |<!--[if lte IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 
-// CONFIGURATION VARIABLES
-// ------------------------------------
+//- CONFIGURATION VARIABLES
+//- ------------------------------------
 script(type='text/javascript').
 	var config = {
 		site_url: '#{config.site_url}',
@@ -17,8 +17,8 @@ script(type='text/javascript').
 		site_desc: '#{config.site_desc}'
 	};
 
-// GOOGLE ANALYTICS
-// ------------------------------------
+//- GOOGLE ANALYTICS
+//- ------------------------------------
 script(type='text/javascript').
 	 var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', '#{accounts.google}']);
@@ -30,7 +30,7 @@ script(type='text/javascript').
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 
-// ALL SITE SCRIPTS MIN
-// -------------------------------------
+//- ALL SITE SCRIPTS MIN
+//- -------------------------------------
 script(type="text/javascript", src="./js/vendor.min.js")
 script(type="text/javascript", src="./js/site.min.js")
