--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,26 +1,26 @@
 extends includes/layout
 
-// ------------------------------
-// CONTENT BLOCK
-// All content sections for the page
-// ------------------------------
+//- ------------------------------
+//- CONTENT BLOCK
+//- All content sections for the page
+//- ------------------------------
 block content
 	div.sections
-		//When Jade adds variable support for includes
-			//each val in pages
-			//#{val}
-			//div##{val}.container-fluid.section
-			//include ./pages/#{val}
+		//- When Jade adds variable support for includes
+			//- each val in pages
+			//- #{val}
+			//- div##{val}.container-fluid.section
+			//- include ./pages/#{val}
 
 		
-		//ONE
+		//- ONE
 		div#one.container-fluid.section
 			include ./pages/one
 
-		//TWO
+		//- TWO
 		div#two.container-fluid.section
 			include ./pages/two
 
-		//THREE
+		//- THREE
 		div#three.container-fluid.section
 			include ./pages/three
