--- a/app/views/pages/three.jade
+++ b/app/views/pages/three.jade
@@ -1,6 +1,6 @@
 div.row
 	div.col-md-12.center
-		//DIV.PAGE: a max-width div for centering content. Full width content should be placed outside of this div.
+		//- DIV.PAGE: a max-width div for centering content. Full width content should be placed outside of this div.
 		div.page
 			h1 THREE 
 			div.right
