--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -6,13 +6,7 @@ extends includes/layout
 //- ------------------------------
 block content
 	div.sections
-		//- When Jade adds variable support for includes
-			//- each val in pages
-			//- #{val}
-			//- div##{val}.container-fluid.section
-			//- include ./pages/#{val}
-
-		
+		//- To Do: Will Update these sections to be dynamic based on config
 		//- ONE
 		div#one.container-fluid.section
 			include ./pages/one
