--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -6,4 +6,4 @@ nav#nav
 	ul#navlist
 		each val in pages
 			li 
-				a(href="##{val}" data-id="#{val}" class="#{val} active" onClick="_gaq.push(['_trackEvent', 'main+nav', '#{val}']);") #{val}
+				a(href="##{val}" data-id="#{val}" class="#{val}" onClick="_gaq.push(['_trackEvent', 'main+nav', '#{val}']);") #{val}
