--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -6,7 +6,7 @@ extends includes/layout
 //- ------------------------------
 block content
 	div.sections
-		//- To Do: Will Update these sections to be dynamic based on config
+		//- REPLACE THESE WITH YOUR SECTIONS
 		//- ONE
 		div#one.container-fluid.section
 			include ./pages/one
