--- a/app/views/includes/scripts.jade
+++ b/app/views/includes/scripts.jade
@@ -4,9 +4,7 @@ script(type="text/javascript", src="http://code.jquery.com/jquery-1.11.2.min.js"
 script(type="text/javascript", src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js")
 script(type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js")
 
-|<!--[if lte IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-
-//- CONFIGURATION VARIABLES
+//- CONFIGURATION VARIABLES (OPTIONAL)
 //- ------------------------------------
 script(type='text/javascript').
 	var config = {
